src/components/Layout/Navigation/NavBar.module.scss
nav {
  display: flex;
  position: relative;
  height: 4rem;
  background-color: #333;
  z-index: 30;
  .nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    color: #fff;
    height: 100%;
    .logo {
      scale: 0.3;
      rotate: 90deg;
    }
    .tooltip {
      display: flex;
      align-items: center;
      gap: 1em;
      z-index: 120;
    }
  }
}

@media (min-width: 768px) {
  .nav {
    .logo {
      position: absolute;
      left: 50%;
      top: 50%;
      translate: -50% -50%;
    }
  }
}

